# betbotx

./: .env_example  Cargo.toml  gb_today.json  ie_today.json
src/: betfair.rs  environment.rs  main.rs
src/betfair/: account.rs  betting.rs  client.rs  mod.rs  navigation.rs  sso.rs
src/betfair/model/: betting.rs  domain.rs  mod.rs  navigation.rs  session.rs
