[package]
name = "betbotapix"
version = "0.1.0"
edition = "2024"

[dependencies]
 anyhow = "1"
 dotenvy = "0.15"
 reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
 rustls = { version = "0.23", default-features = false, features = ["ring"] }
 rustls-native-certs = "0.8"
 rustls-pemfile = "2"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
